--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-skeleton-content",
-  "version": "1.0.24",
+  "name": "@buffle/react-native-skeleton-content",
+  "version": "1.0.26",
   "description": "A simple and fully customizable React Native component that implements a skeleton-like loader",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -17,10 +17,10 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
-    "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
@@ -51,14 +51,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexZajac/react-native-skeleton-content.git"
+    "url": "git+https://github.com/MonsieurBuffle/react-native-skeleton-content.git"
   },
   "author": "Alexandre Zajac",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/alexZajac/react-native-skeleton-content/issues"
   },
-  "homepage": "https://github.com/alexZajac/react-native-skeleton-content#readme",
+  "homepage": "https://github.com/MonsieurBuffle/react-native-skeleton-content#readme",
+  "peerDependencies": {
+    "react-native-redash": "^16.0.11",
+    "expo-linear-gradient": "^11.0.3",
+    "react": "^16.10.2",
+    "react-native": "^0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-unimodules": "^0.7.0-rc.1",
+    "react-native-reanimated": "^2.3.1"
+  },
   "devDependencies": {
     "@babel/preset-typescript": "^7.10.1",
     "@types/jest": "^24.0.18",
@@ -73,17 +82,7 @@
     "jest": "^24.9.0",
     "jest-expo": "^37.0.0",
     "prettier": "^1.18.2",
-    "react": "^16.10.2",
-    "react-native": "^0.62.2",
-    "react-native-gesture-handler": "^1.6.1",
-    "react-native-reanimated": "^2.1.0",
-    "react-native-unimodules": "^0.7.0-rc.1",
     "react-test-renderer": "^16.13.1",
     "typescript": "4.4.4"
-  },
-  "dependencies": {
-    "react-native-redash": "^16.0.11",
-    "expo-linear-gradient": "~10.0.3",
-    "react-native-reanimated": "~2.2.0"
   }
 }
